--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -8,7 +8,6 @@
 
         <div class="ui attached segment">
 
-
             <div class="ui form">
 
                 <div class="inline fields">
@@ -21,8 +20,8 @@
                 </div>
 
                 <div class="inline fields">
-                    <div class="sixteen wide field required">
-                        <label class="custom-label-w-25">ระยะเวลาที่ตรวจสอบ</label>
+                    <div class="thirteen wide field required">
+                        <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY">
                             <button class="ui icon button">
@@ -30,7 +29,7 @@
                             </button>
                         </div>
                         <div class="one">
-                                <label >&nbsp;-&nbsp;</label>
+                            <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
                         </div>
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY">
@@ -39,15 +38,14 @@
                             </button>
                         </div>
                     </div>
-                    <div class="eight wide field required">
-
+                    <div class="eight wide field">
                     </div>
                 </div>
             </div>
 
             <div class="ui center aligned grid">
                 <div class="eight wide column">
-                    <button class="ui mini primary button">
+                    <button class="ui mini primary button" routerLink="/analyst-basic-data-trader">
                         <i class="search icon"></i>
                         วิเคราะห์ข้อมูลเบื้องต้น
                     </button>
