--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-save-message-trader/create-save-message-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-save-message-trader/create-save-message-trader.component.html
@@ -8,7 +8,6 @@
 
     <div class="ui attached segment">
 
-
       <div class="ui form">
 
         <div class="inline fields">
@@ -16,47 +15,39 @@
           </div>
           <div class="six wide field">
             <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-            <input value="591113-01-00001" disabled="" />
+            <input value="591113-01-00001" readonly="" class="custom-readonly">
           </div>
         </div>
 
         <div class="inline fields">
-          <div class="ten wide field">
-          </div>
-          <div class="six wide field">
-
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="thirteen wide field required">
+          <div class="thirteen wide field">
             <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
             <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="01/2559" disabled="">
+              <input type="text" placeholder="MM/YYYY" value="01/2559" readonly="" class="custom-readonly">
               <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
             </div>
             <div class="one">
-              <label>&nbsp;-&nbsp;</label>
+              <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
             </div>
             <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="12/2560" disabled="">
+              <input type="text" placeholder="MM/YYYY" value="12/2560" readonly="" class="custom-readonly">
               <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
             </div>
           </div>
-          <div class="eight wide field required">&nbsp;&nbsp;&nbsp;
+          <div class="eight wide field">&nbsp;&nbsp;&nbsp;
             <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
-            <input value="591113-02-00001" disabled="" />
+            <input value="591113-02-00001" readonly="" class="custom-readonly">
           </div>
         </div>
 
         <div class="inline fields">
           <div class="five wide field">
-            <label style="width: 170em;">กำหนดช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
-            <input value="5" disabled="" />
+            <label style="width: 180em;">กำหนดช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
+            <input value="5" readonly="" class="custom-readonly">
           </div>
         </div>
       </div>
@@ -65,108 +56,54 @@
 
     <div class="ui segment">
       <div class="ui grid">
-        <div class="six wide column">
-
-          <div class="ui list">
+        <div class="three wide column">
+          <div class="ui vertical menu">
             <div class="item">
-              <i class="folder icon"></i>
-              <div class="content">
-                <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
-                      <div class="list">
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</div>
-                          </div>
-                        </div>
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</div>
-                          </div>
-                        </div>
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
-                      <div class="list">
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</div>
-                          </div>
-                        </div>
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">ผู้ประกอบการใหม่</div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">สร้างบันทึกข้อความขอส่งข้อมูล</div>
-                    </div>
-                  </div>
-                </div>
+              <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
+            </div>
+            <div class="item">
+              <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
+              <div class="menu">
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
+                <a class="item">-อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</a>
+                <a class="item">-อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</a>
               </div>
             </div>
-
+            <div class="item">
+              <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
+              <div class="menu">
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">ผู้ประกอบการใหม่</div>
+              <div class="menu">
+                <a class="item">-ผู้ประกอบการใหม่</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
+              <div class="menu">
+                <a class="item">-สรุปจำนวนตามพิกัดสินค้า</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
+              <div class="menu">
+                <a class="item">-รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">สร้างบันทึกข้อความขอส่งข้อมูล</div>
+              <div class="menu">
+                <a class="item">-สร้างบันทึกข้อความขอส่งข้อมูล</a>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="ten wide column">
+        <div class="thirteen wide column">
           <img src="assets/images/create-save-message.JPG" style="width: 100%;">
 
           <div class="ui center aligned grid">
