--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/summary-amount-product-trader/summary-amount-product-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/summary-amount-product-trader/summary-amount-product-trader.component.html
@@ -8,7 +8,6 @@
 
     <div class="ui attached segment">
 
-
       <div class="ui form">
 
         <div class="inline fields">
@@ -16,47 +15,39 @@
           </div>
           <div class="six wide field">
             <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-            <input value="591113-01-00001" disabled="" />
+            <input value="591113-01-00001" readonly="" class="custom-readonly">
           </div>
         </div>
 
         <div class="inline fields">
-          <div class="ten wide field">
-          </div>
-          <div class="six wide field">
-
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="thirteen wide field required">
+          <div class="thirteen wide field">
             <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
             <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="01/2559" disabled="">
+              <input type="text" placeholder="MM/YYYY" value="01/2559" readonly="" class="custom-readonly">
               <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
             </div>
             <div class="one">
-              <label>&nbsp;-&nbsp;</label>
+              <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
             </div>
             <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="12/2560" disabled="">
+              <input type="text" placeholder="MM/YYYY" value="12/2560" readonly="" class="custom-readonly">
               <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
             </div>
           </div>
-          <div class="eight wide field required">&nbsp;&nbsp;&nbsp;
+          <div class="eight wide field">&nbsp;&nbsp;&nbsp;
             <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
-            <input value="591113-02-00001" disabled="" />
+            <input value="591113-02-00001" readonly="" class="custom-readonly">
           </div>
         </div>
 
         <div class="inline fields">
           <div class="five wide field">
-            <label style="width: 170em;">กำหนดช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
-            <input value="5" disabled="" />
+            <label style="width: 180em;">กำหนดช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
+            <input value="5" readonly="" class="custom-readonly">
           </div>
         </div>
       </div>
@@ -64,118 +55,62 @@
     </div>
 
     <div class="ui segment">
+      <div class="ui grid center aligned">
+        <div class="three wide column"></div>
+        <div class="thirteen wide column">
+          สรุปจำนวนผู้ประกอบการรายเดิมตาม พ.ร.บ.ภาษีสรรพสามิต พ.ศ.2560 เพื่อใช้คัดเลือกรายตรวจสอบภาษี ทั่วประเทศ
+        </div>
+      </div>
+
       <div class="ui grid">
-        <div class="six wide column">
-
-          <div class="ui list">
+        <div class="three wide column">
+          <div class="ui vertical menu">
             <div class="item">
-              <i class="folder icon"></i>
-              <div class="content">
-                <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
-                      <div class="list">
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</div>
-                          </div>
-                        </div>
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</div>
-                          </div>
-                        </div>
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
-                      <div class="list">
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</div>
-                          </div>
-                        </div>
-                        <div class="item hand-click">
-                          <i class="file text outline icon"></i>
-                          <div class="content">
-                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">ผู้ประกอบการใหม่</div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="list">
-                  <div class="item">
-                    <i class="folder icon"></i>
-                    <div class="content">
-                      <div class="header">
-                        <a href="javascript:;" routerLink="/create-save-message-trader">สร้างบันทึกข้อความขอส่งข้อมูล
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
+            </div>
+            <div class="item">
+              <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
+              <div class="menu">
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
+                <a class="item">-อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</a>
+                <a class="item">-อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</a>
               </div>
             </div>
-
+            <div class="item">
+              <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
+              <div class="menu">
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</a>
+                <a class="item">-อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">ผู้ประกอบการใหม่</div>
+              <div class="menu">
+                <a class="item">-ผู้ประกอบการใหม่</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
+              <div class="menu">
+                <a class="item">-สรุปจำนวนตามพิกัดสินค้า</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
+              <div class="menu">
+                <a class="item">-รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="header">สร้างบันทึกข้อความขอส่งข้อมูล</div>
+              <div class="menu">
+                <a class="item" routerLink="/create-save-message-trader">-สร้างบันทึกข้อความขอส่งข้อมูล</a>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="ten wide column">
-          <div class="ui grid center aligned">
-            <div class="sixteen wide column">
-              สรุปจำนวนผู้ประกอบการรายเดิมตาม พ.ร.บ.ภาษีสรรพสามิต พ.ศ.2560 เพื่อใช้คัดเลือกรายตรวจสอบภาษี ทั่วประเทศ
-            </div>
-          </div>
-
+        <div class="thirteen wide column">
           <table class="ui small celled table center aligned">
             <thead>
               <tr>
@@ -194,7 +129,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>น้ำมันและผลิตภัณฑ์น้ำมัน</td>
+                <td style="text-align: left;">น้ำมันและผลิตภัณฑ์น้ำมัน</td>
                 <td>3</td>
                 <td>2</td>
                 <td>1</td>
@@ -204,7 +139,7 @@
                 <td>12</td>
               </tr>
               <tr>
-                <td>เครื่องดื่ม</td>
+                <td style="text-align: left;">เครื่องดื่ม</td>
                 <td>2</td>
                 <td>-</td>
                 <td>1</td>
@@ -214,7 +149,7 @@
                 <td>15</td>
               </tr>
               <tr>
-                <td>แก้วและเครื่องแก้ว</td>
+                <td style="text-align: left;">แก้วและเครื่องแก้ว</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -224,7 +159,7 @@
                 <td>-</td>
               </tr>
               <tr>
-                <td>รถยนต์</td>
+                <td style="text-align: left;">รถยนต์</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -234,7 +169,7 @@
                 <td>5</td>
               </tr>
               <tr>
-                <td>ผลิตภัณฑ์เครื่องหอมและเครื่องสำอาง</td>
+                <td style="text-align: left;">ผลิตภัณฑ์เครื่องหอมและเครื่องสำอาง</td>
                 <td>3</td>
                 <td>6</td>
                 <td>2</td>
@@ -244,7 +179,7 @@
                 <td>36</td>
               </tr>
               <tr>
-                <td>พรมและสิ่งทอปูพื้น</td>
+                <td style="text-align: left;">พรมและสิ่งทอปูพื้น</td>
                 <td>1</td>
                 <td>-</td>
                 <td>-</td>
@@ -254,7 +189,7 @@
                 <td>2</td>
               </tr>
               <tr>
-                <td>รถจักรยานยนต์</td>
+                <td style="text-align: left;">รถจักรยานยนต์</td>
                 <td>1</td>
                 <td>-</td>
                 <td>-</td>
@@ -264,7 +199,7 @@
                 <td>3</td>
               </tr>
               <tr>
-                <td>แบตเตอรี่</td>
+                <td style="text-align: left;">แบตเตอรี่</td>
                 <td>1</td>
                 <td>-</td>
                 <td>1</td>
@@ -274,7 +209,7 @@
                 <td>5</td>
               </tr>
               <tr>
-                <td>ไนท์คลับและดิสโกเธค</td>
+                <td style="text-align: left;">ไนท์คลับและดิสโกเธค</td>
                 <td>5</td>
                 <td>8</td>
                 <td>8</td>
@@ -284,7 +219,7 @@
                 <td>35</td>
               </tr>
               <tr>
-                <td>สถานอาบน้ำหรืออบตัวและนวด</td>
+                <td style="text-align: left;">สถานอาบน้ำหรืออบตัวและนวด</td>
                 <td>12</td>
                 <td>24</td>
                 <td>18</td>
@@ -294,7 +229,7 @@
                 <td>98</td>
               </tr>
               <tr>
-                <td>สนามแข่งม้า</td>
+                <td style="text-align: left;">สนามแข่งม้า</td>
                 <td>-</td>
                 <td>1</td>
                 <td>-</td>
@@ -304,7 +239,7 @@
                 <td>1</td>
               </tr>
               <tr>
-                <td>สนามกอล์ฟ</td>
+                <td style="text-align: left;">สนามกอล์ฟ</td>
                 <td>6</td>
                 <td>2</td>
                 <td>7</td>
@@ -314,7 +249,7 @@
                 <td>18</td>
               </tr>
               <tr>
-                <td>รวม (ราย)</td>
+                <td style="text-align: left;">รวม (ราย)</td>
                 <td>34</td>
                 <td>43</td>
                 <td>38</td>
@@ -330,11 +265,11 @@
             <div class="sixteen wide column">
               <button class="ui mini primary button">
                 <i class="print icon"></i>
-                พิมพ์บันทึกข้อความพร้อมกระดาษทำการ
+                พิมพ์กระดาษทำการ
               </button>
               <button class="ui mini primary button">
-                <i class="print icon"></i>
-                พิมพ์บันทึกข้อความ
+                <i class="save icon"></i>
+                บันทึกข้อมูล
               </button>
               <button class="ui mini button">
                 <i class="refresh icon"></i>
