--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-stamp-yearly/check-stamp-yearly.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-stamp-yearly/check-stamp-yearly.component.html
@@ -1,3 +1,535 @@
-<p>
-  check-stamp-yearly works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ตรวจแสตมป์เปรียบเทียบรวมทั้งปีงบประมาณ</h2>
+
+    <div class="ui top attached header">
+      <span>ตรวจสแตมป์ปีงบปะมาณ</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
+            <select name="selectZone" id="selectZone" class="ui dropdown">
+              <option *ngFor="let item of zoneList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
+            <select name="selectArea" id="selectArea" class="ui dropdown">
+              <option *ngFor="let item of areaList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">พื้นที่ลำปางสาขาเมืองลำปาง</label>
+            <input type="file" />
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">พื้นที่ลำปางสาขาสบปราบ</label>
+            <input type="file" />
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-25">พื้นที่ลำปางสาขาแจ้งห่ม</label>
+            <input type="file" />
+          </div>
+        </div>
+
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <button class="ui mini primary button width-100" (click)="uploadData()">
+              <i class="upload icon"></i>
+              อัพโหลด
+            </button>
+            <button class="ui mini button width-100" (click)="clearData()">
+              <i class="refresh icon"></i>
+              ล้างข้อมูล
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <br>
+    <div *ngIf="showData">
+      <div class="ui top attached header segment">
+        พื้นที่ลำปาง
+      </div>
+
+      <div class="ui attached segment">
+        <table class="ui small celled table">
+          <thead>
+            <tr style="text-align: center;">
+              <th rowspan="2">ชนิดแสตมป์</th>
+              <th rowspan="2">คงเหลือยกมาจากปีก่อน (ดวง)</th>
+              <th colspan="2">รวมทั้งปีงบประมาณ</th>
+              <th rowspan="2">คงเหลือ ณ ปัจจุบัน (ดวง)</th>
+              <th rowspan="2">คงเหลือ</th>
+            </tr>
+            <tr style="text-align: center;">
+              <th style="border-left: 1px solid rgba(34,36,38,.1);">รับ</th>
+              <th>จ่าย</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 28</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">20,000</td>
+              <td class="bg-row-orange-highlight">20,000</td>
+              <td class="bg-row-orange-highlight">0</td>
+              <td>
+                <span class="ui red horizontal label" style="text-align: right;">90</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 30</td>
+              <td>&nbsp;</td>
+              <td>40,000</td>
+              <td>36,000</td>
+              <td>4,000</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 35</td>
+              <td>&nbsp;</td>
+              <td>60,000</td>
+              <td>58,410</td>
+              <td>1,590</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 40</td>
+              <td>&nbsp;</td>
+              <td>40,000</td>
+              <td>40,000</td>
+              <td>0</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 28</td>
+              <td>&nbsp;</td>
+              <td>20,000</td>
+              <td>20,000</td>
+              <td>0</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 30</td>
+              <td>&nbsp;</td>
+              <td>40,000</td>
+              <td>32,000</td>
+              <td>8,000</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 35</td>
+              <td>&nbsp;</td>
+              <td>60,000</td>
+              <td>59,781</td>
+              <td>219</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 40</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">80,000</td>
+              <td class="bg-row-orange-highlight">79,500</td>
+              <td class="bg-row-orange-highlight">500</td>
+              <td>
+                <span class="ui red horizontal label" style="text-align: right;">1000</span>
+              </td>
+            </tr>
+            <tr>
+              <td>สุราแช่ชุมชน</td>
+              <td>&nbsp;</td>
+              <td>20,000</td>
+              <td>19,850</td>
+              <td>150</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 2 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>20,000</td>
+              <td>18,500</td>
+              <td>1,500</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 10 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>40,000</td>
+              <td>34,670</td>
+              <td>5,330</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 50 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>60,000</td>
+              <td>60,000</td>
+              <td>0</td>
+              <td>
+                <span class="ui green horizontal label" style="text-align: right;">0</span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="ui top attached header segment">
+        พื้นที่ลำปางสาขาเมืองลำปาง
+      </div>
+
+      <div class="ui attached segment">
+        <table class="ui small celled table">
+          <thead>
+            <tr style="text-align: center;">
+              <th rowspan="2">ชนิดแสตมป์</th>
+              <th rowspan="2">คงเหลือยกมาจากปีก่อน (ดวง)</th>
+              <th colspan="2">รวมทั้งปีงบประมาณ</th>
+              <th rowspan="2">คงเหลือ ณ ปัจจุบัน (ดวง)</th>
+            </tr>
+            <tr style="text-align: center;">
+              <th style="border-left: 1px solid rgba(34,36,38,.1);">รับ</th>
+              <th>จ่าย</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 28</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">9,910</td>
+              <td class="bg-row-orange-highlight">8790</td>
+              <td class="bg-row-orange-highlight">1,120</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 30</td>
+              <td>&nbsp;</td>
+              <td>16,000</td>
+              <td>15800</td>
+              <td>200</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 35</td>
+              <td>&nbsp;</td>
+              <td>20,000</td>
+              <td>19655</td>
+              <td>345</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 40</td>
+              <td>&nbsp;</td>
+              <td>20000</td>
+              <td>19750</td>
+              <td>250</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 28</td>
+              <td>&nbsp;</td>
+              <td>10000</td>
+              <td>9823</td>
+              <td>177</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 30</td>
+              <td>&nbsp;</td>
+              <td>15,000</td>
+              <td>14,320</td>
+              <td>680</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 35</td>
+              <td>&nbsp;</td>
+              <td>36540</td>
+              <td>34250</td>
+              <td>2,290</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 40</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">68,100</td>
+              <td class="bg-row-orange-highlight">68550</td>
+              <td class="bg-row-orange-highlight">-450</td>
+            </tr>
+            <tr>
+              <td>สุราแช่ชุมชน</td>
+              <td>&nbsp;</td>
+              <td>7,560</td>
+              <td>6850</td>
+              <td>710</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 2 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>9320</td>
+              <td>9130</td>
+              <td>190</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 10 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>27800</td>
+              <td>25,400</td>
+              <td>2,400</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 50 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>45,600</td>
+              <td>45500</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="ui top attached header segment">
+        พื้นที่ลำปางสาขาสบปราบ
+      </div>
+
+      <div class="ui attached segment">
+        <table class="ui small celled table">
+          <thead>
+            <tr style="text-align: center;">
+              <th rowspan="2">ชนิดแสตมป์</th>
+              <th rowspan="2">คงเหลือยกมาจากปีก่อน (ดวง)</th>
+              <th colspan="2">รวมทั้งปีงบประมาณ</th>
+              <th rowspan="2">คงเหลือ ณ ปัจจุบัน (ดวง)</th>
+            </tr>
+            <tr style="text-align: center;">
+              <th style="border-left: 1px solid rgba(34,36,38,.1);">รับ</th>
+              <th>จ่าย</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 28</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">5,000</td>
+              <td class="bg-row-orange-highlight">4780</td>
+              <td class="bg-row-orange-highlight">220</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 30</td>
+              <td>&nbsp;</td>
+              <td>10,000</td>
+              <td>9840</td>
+              <td>160</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 35</td>
+              <td>&nbsp;</td>
+              <td>19,210</td>
+              <td>18640</td>
+              <td>570</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 40</td>
+              <td>&nbsp;</td>
+              <td>10000</td>
+              <td>9780</td>
+              <td>220</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 28</td>
+              <td>&nbsp;</td>
+              <td>5000</td>
+              <td>4123</td>
+              <td>877</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 30</td>
+              <td>&nbsp;</td>
+              <td>10,000</td>
+              <td>9,650</td>
+              <td>350</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 35</td>
+              <td>&nbsp;</td>
+              <td>13140</td>
+              <td>12345</td>
+              <td>795</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 40</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">5,400</td>
+              <td class="bg-row-orange-highlight">5321</td>
+              <td class="bg-row-orange-highlight">79</td>
+            </tr>
+            <tr>
+              <td>สุราแช่ชุมชน</td>
+              <td>&nbsp;</td>
+              <td>6,600</td>
+              <td>6542</td>
+              <td>58</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 2 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>5460</td>
+              <td>5211</td>
+              <td>249</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 10 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>4100</td>
+              <td>3,465</td>
+              <td>635</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 50 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>8,930</td>
+              <td>7888</td>
+              <td>1,042</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="ui top attached header segment">
+        พื้นที่ลำปางสาขาแจ้งห่ม
+      </div>
+
+      <div class="ui attached segment">
+        <table class="ui small celled table">
+          <thead>
+            <tr style="text-align: center;">
+              <th rowspan="2">ชนิดแสตมป์</th>
+              <th rowspan="2">คงเหลือยกมาจากปีก่อน (ดวง)</th>
+              <th colspan="2">รวมทั้งปีงบประมาณ</th>
+              <th rowspan="2">คงเหลือ ณ ปัจจุบัน (ดวง)</th>
+            </tr>
+            <tr style="text-align: center;">
+              <th style="border-left: 1px solid rgba(34,36,38,.1);">รับ</th>
+              <th>จ่าย</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 28</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">5,000</td>
+              <td class="bg-row-orange-highlight">4732</td>
+              <td class="bg-row-orange-highlight">268</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 30</td>
+              <td>&nbsp;</td>
+              <td>10,000</td>
+              <td>9857</td>
+              <td>143</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 35</td>
+              <td>&nbsp;</td>
+              <td>19,200</td>
+              <td>18720</td>
+              <td>480</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดกลาง 40</td>
+              <td>&nbsp;</td>
+              <td>10000</td>
+              <td>8670</td>
+              <td>1,330</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 28</td>
+              <td>&nbsp;</td>
+              <td>5000</td>
+              <td>4351</td>
+              <td>649</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 30</td>
+              <td>&nbsp;</td>
+              <td>7,000</td>
+              <td>6,152</td>
+              <td>848</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 35</td>
+              <td>&nbsp;</td>
+              <td>10101</td>
+              <td>9880</td>
+              <td>221</td>
+            </tr>
+            <tr>
+              <td>สุรากลั่นชุมชน ขนาดใหญ่ 40</td>
+              <td class="bg-row-orange-highlight">&nbsp;</td>
+              <td class="bg-row-orange-highlight">5,000</td>
+              <td class="bg-row-orange-highlight">4561</td>
+              <td class="bg-row-orange-highlight">439</td>
+            </tr>
+            <tr>
+              <td>สุราแช่ชุมชน</td>
+              <td>&nbsp;</td>
+              <td>5,690</td>
+              <td>5312</td>
+              <td>378</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 2 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>3720</td>
+              <td>3691</td>
+              <td>29</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 10 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>2770</td>
+              <td>2,655</td>
+              <td>115</td>
+            </tr>
+            <tr>
+              <td>ยาสูบ 50 สตางค์</td>
+              <td>&nbsp;</td>
+              <td>5,470</td>
+              <td>4623</td>
+              <td>847</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+
+  </div>
+</div>
