add save result trading page

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -47,7 +47,19 @@
                             </div>
                         </div>
                         <a class="item" [routerLink]="['/compare-report-asset']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
-                        <a class="item" [routerLink]="['/3']" routerLinkActive="active">บันทึกผลการจัดซื้อจัดจ้าง</a>
+                        <a class="item" [routerLink]="['/save-result-trading']" routerLinkActive="active">บันทึกผลการจัดซื้อจัดจ้าง</a>
+                    </div>
+                </div>
+                <div class="ui simple dropdown item">
+                    <i class="dropdown icon"></i>
+                    ตรวจเบิกจ่าย
+                    <div class="menu">
+                        <a class="item" [routerLink]="['/1']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
+                        <a class="item" [routerLink]="['/2']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
+                        <a class="item" [routerLink]="['/3']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
+                        <a class="item" [routerLink]="['/4']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
+                        <a class="item" [routerLink]="['/5']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
+                        <a class="item" [routerLink]="['/6']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
                     </div>
                 </div>
             </div>
