update custom table

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -59,7 +59,7 @@
         </div>
         <div class="thirteen wide column">
           <div style="overflow-x: scroll;">
-            <table class="ui small celled table">
+            <table class="ui small celled table" style="width: 250%;">
               <thead>
                 <tr class="center aligned">
                   <th rowspan="2">ทะเบียนสรรพสามิต</th>
@@ -348,49 +348,51 @@
                   <td> 32.76 </td>
                   <td>24</td>
                 </tr>
-                <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>ชำระภาษีครบ 24 เดือน</td>
-                  <td>&nbsp;</td>
-                  <td>17</td>
-                  <td>ราย</td>
-                </tr>
-                <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>ชำระภาษีไม่ครบ 24 เดือน</td>
-                  <td>&nbsp;</td>
-                  <td>2</td>
-                  <td>ราย</td>
-                </tr>
-                <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>รวมผู้ประกอบการทั้งสิ้นทั้งสิ้น</td>
-                  <td>&nbsp;</td>
-                  <td>19</td>
-                  <td>ราย</td>
-                </tr>
               </tbody>
+              <tfoot>
+                <tr>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>ชำระภาษีครบ 24 เดือน</th>
+                  <th>&nbsp;</th>
+                  <th>17</th>
+                  <th>ราย</th>
+                </tr>
+                <tr>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>ชำระภาษีไม่ครบ 24 เดือน</th>
+                  <th>&nbsp;</th>
+                  <th>2</th>
+                  <th>ราย</th>
+                </tr>
+                <tr>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>&nbsp;</th>
+                  <th>รวมผู้ประกอบการทั้งสิ้นทั้งสิ้น</th>
+                  <th>&nbsp;</th>
+                  <th>19</th>
+                  <th>ราย</th>
+                </tr>
+              </tfoot>
             </table>
           </div>
 
