--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -131,7 +131,7 @@
 
         <div class="thirteen wide column">
           <div style="overflow-x: scroll;">
-            <table class="ui small celled table center aligned">
+            <table class="ui small celled table center aligned" style="width: 200%;">
               <thead>
                 <tr>
                   <th rowspan="2">ลำดับ</th>
