--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
@@ -181,7 +181,7 @@
         <div class="ui grid center aligned">
             <div class="sixteen wide column">
                 <button class="ui button" routerLink="/select-new-form">
-                    <i class="long arrow left icon"></i>
+                    <i class="arrow left icon"></i>
                     ย้อนกลับ
                 </button>
             </div>
